--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,14 +1,13 @@
 .CardForm {
-    width: 60%;
+    width: 50%;
 }
 
 .CardForm-container {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    padding-left: 24rem;
 }
 
 .CardForm-wrapper {
@@ -19,13 +18,21 @@
 
         & label {
             color: var(--very-dark-violet);
-            font-size: 1.8rem;
+            font-size: clamp(
+                1.3rem,
+                calc(1.3rem + ((1vw - 0.36rem) * 0.2273)),
+                1.8rem
+            );
             text-transform: uppercase;
             padding: 2.5rem 0 0.5rem 0;
         }
 
         & input {
-            font-size: 2rem;
+            font-size: clamp(
+                1.3rem,
+                calc(1.3rem + ((1vw - 0.36rem) * 0.2273)),
+                1.8rem
+            );
             color: var(--dark-grayish-violet);
             height: 4rem;
             border: 1px solid var(--light-grayish-violet);
@@ -33,7 +40,11 @@
             padding: 2rem 1rem;
 
             &::placeholder {
-                font-size: 2rem;
+                font-size: clamp(
+                    1.3rem,
+                    calc(1.3rem + ((1vw - 0.36rem) * 0.2273)),
+                    1.8rem
+                );
                 color: var(--dark-grayish-violet);
             }
 
@@ -63,7 +74,7 @@
             padding-top: 2.5rem;
 
             & .CardForm-expiry-wrapper {
-                width: 50%;
+                width: 70%;
                 & input {
                     width: 40%;
                     margin: 0.5rem 1rem 0 0;
@@ -76,10 +87,16 @@
                         float: right;
                     }
                 }
+                & div {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    gap: 0.5rem;
+                }
             }
 
             & .CardForm-cvc-wrapper {
-                width: 50%;
+                width: 30%;
                 & input {
                     width: 100%;
                     margin-top: 0.5rem;
