--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,3 +37,10 @@ html {
 img {
     width: 100%;
 }
+
+.form_hide {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+}
